--- a/Coding for juniors official/programs.html
+++ b/Coding for juniors official/programs.html
@@ -22,7 +22,6 @@
     <!-- ======================= NAVBAR HTML ======================= -->
 
 
-
     <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark" id="navbar">
         <!-- <nav class="navbar navbar-light bg-light">
           <a class="navbar-brand" href="#">
@@ -43,8 +42,7 @@
         </div> -->
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item ">
-                    <a class="nav-link" href="index.html">Home <span
-                            class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="about.html">About Us</a>
@@ -296,26 +294,29 @@
         </a>
     </div>
 
-    <!--========================= Our Programs HTML========================= -->
 
+
+    <!--========================= Our Programs HTML========================= -->
 
 
     <section class="programs_section" id="services-section">
         <div class="container">
+
             <h1 class="centre-size" id="programs-h">Our Programs</h1>
             <div class="services">
 
                 <div class="service-box">
-
+                    <a href="pricing.html" ><button type="button" id="program_enroll_btn" class="btn btn-link  ">Enroll Now</button></a>
                     <img src="images/c_icon.png" alt="Our Services" class="food-logo">
                     <h3 class="centre-size">C Languge</h3>
                     <p class="centre-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. At, tempore
                         doloremque ad saepe vero aliquid?</p>
                     <a href="programs/c.html"> <button type="button" class="btn btn-primary" id="see-details_button">See
                             Details</button> </a>
+
                 </div>
                 <div class="service-box">
-
+                    <a href="pricing.html" ><button type="button" id="program_enroll_btn" class="btn btn-link  ">Enroll Now</button></a>
                     <img src="images/c++_icon.png" alt="Our Services" class="food-logo">
                     <h3 class="centre-size">C++ Languge</h3>
                     <p class="centre-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. At, tempore
@@ -326,7 +327,7 @@
                 </div>
 
                 <div class="service-box">
-
+                    <a href="pricing.html" ><button type="button" id="program_enroll_btn" class="btn btn-link  ">Enroll Now</button></a>
                     <img src="images/python_icon.png" alt="Our Services" class="food-logo">
                     <h3 class="centre-size">Python Languge</h3>
                     <p class="centre-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. At, tempore
@@ -338,7 +339,7 @@
             <div class="services">
 
                 <div class="service-box">
-
+                    <a href="pricing.html" ><button type="button" id="program_enroll_btn" class="btn btn-link  ">Enroll Now</button></a>
                     <img src="images/html_icon.png" alt="Our Services" class="food-logo">
                     <h3 class="centre-size">Web Development</h3>
                     <p class="centre-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. At, tempore
@@ -348,7 +349,7 @@
                     </a>
                 </div>
                 <div class="service-box">
-
+                    <a href="pricing.html" ><button type="button" id="program_enroll_btn" class="btn btn-link  ">Enroll Now</button></a>
                     <img src="images/javascript_icon.png" alt="Our Services" class="food-logo">
                     <h3 class="centre-size">Android Development</h3>
                     <p class="centre-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. At, tempore
@@ -357,7 +358,7 @@
                             id="see-details_button">See Details</button> </a>
                 </div>
                 <div class="service-box">
-
+                    <a href="pricing.html" ><button type="button" id="program_enroll_btn" class="btn btn-link  ">Enroll Now</button></a>
                     <img src="images/java_icon.png" alt="Our Services" class="food-logo">
                     <h3 class="centre-size">Java Languge</h3>
                     <p class="centre-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. At, tempore
@@ -416,6 +417,7 @@
         </form>
 
     </div>
+
 
 
 
@@ -503,25 +505,25 @@
 
                 <h3 class="footer_headings">All Programs</h3>
 
-                <a class="footer_text" href="programs/c.html">
-                    C Programing Language
-                    
+                <a href="programs/c.html">
+                    <p class="footer_text">C Programing Language</p>
                 </a>
-                <a class="footer_text" href="programs/python.html">
-                    Python Programing Language
+                <a href="programs/python.html">
+                    <p class="footer_text">Python Programing Language</p>
                 </a>
-                <a class="footer_text" href="programs/java.html">
-                   Java Programing Language
+                <a href="programs/java.html">
+                    <p class="footer_text">Java Programing Language</p>
                 </a>
-                <a class="footer_text" href="programs/c++.html">
-                    C++ Programing Language
+                <a href="programs/c++.html">
+                    <p class="footer_text">C++ Programing Language</p>
                 </a>
-                <a class="footer_text" href="programs/web-development.html">
-                    Web Development program
+                <a href="programs/web-development.html">
+                    <p class="footer_text">Wed Development program</p>
                 </a>
-                <a class="footer_text" href="programs/android.html">
-                   Android Development program
+                <a href="programs/android.html">
+                    <p class="footer_text">Android Development program</p>
                 </a>
+
             </div>
         </div>
 
