--- a/Coding for juniors official/blogs.html
+++ b/Coding for juniors official/blogs.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="blog.css">
     <!-- <link rel="stylesheet" href="js.js"> -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" media="screen and (max-width: 1170px )" href="phone.css">
@@ -317,7 +318,7 @@
 
     <!--====================== Our Blogs section HTML ==================================-->
     <!-- 1st row -->
-    <div class="row mb-2">
+    <div class="row mb-2 blogs_section">
       <div class="col-md-6">
         <div
           class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
@@ -408,6 +409,7 @@
 
 
     <!-- ================================================== FOOTER HTML ============================================= -->
+  
     <footer class="centre-size" id="footer">
       <div class="footer_grid">
 
@@ -488,29 +490,28 @@
 
           <div class="footer_our_programs">
 
-              <h3 class="footer_headings">All Programs</h3>
+            <h3 class="footer_headings">All Programs</h3>
 
-              <a class="footer_text" href="programs/c.html">
-                    C Programing Language
-                    
-                </a>
-                <a class="footer_text" href="programs/python.html">
-                    Python Programing Language
-                </a>
-                <a class="footer_text" href="programs/java.html">
-                   Java Programing Language
-                </a>
-                <a class="footer_text" href="programs/c++.html">
-                    C++ Programing Language
-                </a>
-                <a class="footer_text" href="programs/web-development.html">
-                    Web Development program
-                </a>
-                <a class="footer_text" href="programs/android.html">
-                   Android Development program
-                </a>
+            <a href="programs/c.html">
+                <p class="footer_text">C Programing Language</p>
+            </a>
+            <a href="programs/python.html">
+                <p class="footer_text">Python Programing Language</p>
+            </a>
+            <a href="programs/java.html">
+                <p class="footer_text">Java Programing Language</p>
+            </a>
+            <a href="programs/c++.html">
+                <p class="footer_text">C++ Programing Language</p>
+            </a>
+            <a href="programs/web-development.html">
+                <p class="footer_text">Wed Development program</p>
+            </a>
+            <a href="programs/android.html">
+                <p class="footer_text">Android Development program</p>
+            </a>
 
-          </div>
+        </div>
       </div>
 
       </div>
