--- a/Coding for juniors official/index.html
+++ b/Coding for juniors official/index.html
@@ -868,7 +868,8 @@
 
     <!-- =======sliding manualy by me======= -->
     <script src="/js.js"></script>
-
+    
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
