--- a/Coding for juniors official/about.html
+++ b/Coding for juniors official/about.html
@@ -662,6 +662,8 @@
     integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
     crossorigin="anonymous"></script>
 
+<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js">
+
 </body>
 
 </html>
