--- a/Coding for juniors official/about.html
+++ b/Coding for juniors official/about.html
@@ -386,6 +386,7 @@
       <div class="card-body">
         <div class="icon_body icon2">
           <img src="images/about_feature_icon7.png" alt="loading" class="food-logo about_fetures_icons">
+          
         </div>
         <h5 class="card-title about_features_heading">Concept Tutorials</h5>
         <p class="card-text about_features_para">Videos explain new concepts before each unit</p>
@@ -411,7 +412,7 @@
           Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
       </div>
       <div class="col-md-5" order="md-1">
-        <img src="images/about_icon1.jpg" alt="Img Loading">
+        <img src="/images/about_icon1.jpg" alt="Img Loading">
  
       </div>
 
@@ -427,7 +428,7 @@
             Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
         </div>
         <div class="col-md-5">
-          <img src="images/about_icon2.jpg" alt="Img Loading">
+          <img src="/images/about_icon2.jpg" alt="Img Loading">
         
         </div>
       </div>
